--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/knex": "^0.16.1",
+    "@types/mysql": "^2.15.20",
     "cors": "^2.8.5",
-    "express": "^4.17.2"
+    "dotenv": "^11.0.0",
+    "express": "^4.17.2",
+    "knex": "^0.95.15",
+    "mysql": "^2.18.1"
   }
 }
